--- a/css/mm-style.css
+++ b/css/mm-style.css
@@ -43,40 +43,32 @@ html, body {
     text-align: center;
     width: 12%;
     height: 6%;
-    background-color: #808080FF;
+    background-color: blue;
     transform-origin: top left;
     border-radius: 50%;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
     z-index: 2;
 }
-.sub-topic:nth-of-type(1){
-    transform:translateY(-340%) translate(-50%, -50%);
+.subitem-container {
+    position: relative; /* 기준점 역할 */
+    top: 0%;
+    left: 0%;
+    width: 100%; /* 서브 토픽 크기에 맞춤 */
+    height: 100%; /* 서브 토픽 크기에 맞춤 */
 }
-.sub-topic:nth-of-type(2){
-    transform:translateX(-180%) translate(-50%, -50%);
-}
-.sub-topic:nth-of-type(3){
-    transform:translateY(340%) translate(-50%, -50%);
-}
-.sub-topic:nth-of-type(4){
-    transform:translateX(180%) translate(-50%, -50%);
-}
-.subitem{
+.subitem {
     position: absolute;
-    text-align: center;
-    background-color: black;
-    transform-origin: top left;
+    width: 60px;
+    height: 60px;
+    background-color: #ffcc00;
     border-radius: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
+    text-align: center;
+    line-height: 60px;
+    color: white;
+    font-weight: bold;
 }
 .connector {
     position: absolute;
     background-color: #A9A9A980; 
-    top: 50%;
-    left: 50%;
     height: 2px; 
     transform-origin: 0% 50%; /* 선의 회전 중심을 왼쪽으로 설정 */
     z-index: 1;
