--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,8 @@
 html, body{
     background-color: white;
-    font-size: 1vw;
-    height: 100%;
+    font-size: 1.5vw;
+    height: 100vh;
     margin: 0;
-    padding: 0;
 }
 *, *::before, *::after {
     box-sizing: border-box;
@@ -12,36 +11,33 @@ html, body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
+    gap:1vw;
     align-items: center;
 }
 .center-vertical{
-    display: flex;
+    display: grid;
+    grid-template-rows: auto auto auto;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     height: 100%;
-    padding: 0;
-    margin: 0;
+    gap: 20px;
+    padding: 20px;
 }
 .center-vertical p{
     margin: 0;
-    width: 30%;
-    height: 15%;
-    font-size: 5vw;
+    text-align: center;
+    font-size: 3.5em;
 }
-#title{
-    margin: 0;
-    margin-bottom: 0px;
-    width: 17%;
-    height: 5%;
-    font-size: 34px;
+#input-title{
+    font-size: 0.8em;
+    width: auto;
     color: #888888;
 }
 #tag{
-    width: 6%;
     color: #888888;
-    margin: 20px;
+    font-size: 0.4em;
 }
 header{
     display: flex;
@@ -55,15 +51,13 @@ header{
     position: absolute;
     z-index: 1;
 }
-main{
+#main{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 90%;
     background-color: #f8f8f8;
-    padding: 0;
+    flex: 1;
 }
 .menu-button{
     margin: 10px;
@@ -84,8 +78,7 @@ main{
 }
 .login-button{
     margin: 2%;
-    width: 3%;
-    height: 20%;
+    font-size: 0.4em;
     background-color: transparent;
     top: 10%;
     right: 6%;
@@ -101,8 +94,7 @@ main{
 }
 .register-button{
     margin: 2%;
-    width: 3%;
-    height: 20%;
+    font-size: 0.4em;
     background-color: transparent;
     top: 10%;
     right: 2%;
@@ -168,4 +160,5 @@ main{
     background-color: transparent;
     box-sizing: border-box;
     border-bottom : 1px solid #A9A9A980;
+    color: black;
 }
